--- a/src/main/resources/templates/Listpage.html
+++ b/src/main/resources/templates/Listpage.html
@@ -21,11 +21,13 @@
 					<td th:text="${book.title}"></td>
 					<td th:text="${book.isbn}"></td>
 					<td th:text="${book.year}"></td>
+					<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+					<td><a th:href="@{/edit{id}(id=${book.id})}">Edit</a></td>
 
 				</tr>
 			</tbody>
 		</table>
-
+		<a href="/add">Add Book</a>
 	</div>
 </body>
 </html>
