--- a/src/main/resources/templates/Listpage.html
+++ b/src/main/resources/templates/Listpage.html
@@ -3,6 +3,8 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Book list</title>
+<link rel="stylesheet" href="css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}"></link>
 
 </head>
 <body>
@@ -15,19 +17,20 @@
 					<th><b>Title</b></th>
 					<th><b>ISBN</b></th>
 					<th><b>Year</b></th>
+					<th><b></b></th>
+					<th><b></b></th>
 				</tr>
 				<tr th:each="book : ${books}">
 					<td th:text="${book.author}"></td>
 					<td th:text="${book.title}"></td>
 					<td th:text="${book.isbn}"></td>
 					<td th:text="${book.year}"></td>
-					<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-					<td><a th:href="@{/edit{id}(id=${book.id})}">Edit</a></td>
-
+					<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+					<td><a class="btn btn-danger" th:href="@{/edit{id}(id=${book.id})}">Edit</a></td>
 				</tr>
 			</tbody>
 		</table>
-		<a href="/add">Add Book</a>
+		<a class="btn btn-success" href="/add">Add Book</a>
 	</div>
 </body>
 </html>
