--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -3,6 +3,9 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Add Book</title>
+<link rel="stylesheet"
+	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+
 </head>
 <body>
 	<h1>Add Book</h1>
@@ -18,6 +21,14 @@
 		<input type="number" th:field="*{year}" />
 		<label for="price">Price</label>
 		<input type="number" th:field="*{price}" />
+		
+		<div style="clear: both; display: block; height: 10px;"></div>
+		<label for="categoryList">Category</label>
+			 <select id="categoryList" th:field="*{category}" class="form-control">
+       			<option th:each="category: ${categories}" th:value="${category.categoryid}" th:text="${category.name}"></option>
+    			</select>
+    			
+		<div style="clear: both; display: block; height: 10px;"></div>
 		<input type="submit" value="Save"></input>
 	</form>
 </div>
