--- a/src/main/resources/templates/Listpage.html
+++ b/src/main/resources/templates/Listpage.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-<title>Book list</title>
-<link rel="stylesheet" href="css/bootstrap.min.css"
-	th:href="@{css/bootstrap.min.css}"></link>
+<title>Booklist</title>
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}" />
 
 </head>
 <body>
 	<div class="container">
-		<h1>Books</h1>
+		<div class="col-md-4">
+			<h1>Books</h1>
+		</div>
+		<div class="col-md-4">
+			<h3 th:inline="text">Welcome
+				[[${#httpServletRequest.remoteUser}]]</h3>
+		</div>
+		<div class="col-md-4" style="padding: 20px 0">
+			<form th:action="@{/logout}" method="post">
+				<input type="submit" value="Sign Out" class="btn btn-danger" />
+			</form>
+		</div>
 		<table class="table table-striped">
-			<tbody>
-				<tr>
-					<th><b>Author</b></th>
-					<th><b>Title</b></th>
-					<th><b>ISBN</b></th>
-					<th><b>Year</b></th>
-					<th><b>Category</b></th>
-					<th><b></b></th>
-					<th><b></b></th>
-				</tr>
-				<tr th:each="book : ${books}">
-					<td th:text="${book.author}"></td>
-					<td th:text="${book.title}"></td>
-					<td th:text="${book.isbn}"></td>
-					<td th:text="${book.year}"></td>
-					<td th:text ="${book.category.name}"></td>
-					<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-					<td><a class="btn btn-danger" th:href="@{/edit{id}(id=${book.id})}">Edit</a></td>
-				</tr>
-			</tbody>
+
+			<tr>
+				<th><b>Author</b></th>
+				<th><b>Title</b></th>
+				<th><b>ISBN</b></th>
+				<th><b>Year</b></th>
+				<th><b>Category</b></th>
+				<th sec:authorize="hasRole('ADMIN')"> </th>
+				<th><b></b></th>
+			</tr>
+			<tr th:each="book : ${books}">
+				<td th:text="${book.author}"></td>
+				<td th:text="${book.title}"></td>
+				<td th:text="${book.isbn}"></td>
+				<td th:text="${book.year}"></td>
+				<td th:text="${book.category.name}"></td>	
+					<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>    		
+				<td><a class="btn btn-danger"
+					th:href="@{/edit{id}(id=${book.id})}">Edit</a></td>
+			</tr>
+
 		</table>
 		<a class="btn btn-success" href="/add">Add Book</a>
+
 	</div>
 </body>
 </html>
