--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -20,7 +20,7 @@
 		<label for="year">Year</label>
 		<input type="number" th:field="*{year}" />
 		<label for="price">Price</label>
-		<input type="number" th:field="*{price}" />
+		<input type="text" th:field="*{price}" />
 		
 		<div style="clear: both; display: block; height: 10px;"></div>
 		<label for="categoryList">Category</label>
