--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -18,7 +18,7 @@
 		<label for="year">Year</label>
 		<input type="number" th:field="*{year}" />
 		<label for="price">Price</label>
-		<input type="number" th:field="*{price}" />
+		<input type="text" th:field="*{price}" />
 		<input type="hidden" id="categoryid" th:field="*{category.categoryid}" />
 		<input type="submit" value="Save"></input>
 	</form>
